# automafile

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  architecture.md  compose.example.yml  config.example.jsonc  conftest.py  cspell.json  extraction-plan.md  plan.md  pyproject.toml
.claude/: settings.json
.claude/skills/triage/: SKILL.md
.devcontainer/: devcontainer.json  docker-compose.dev.example.yml  docker-compose.dev.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md
automafile/: __init__.py  bootstrap.py  cli.py  config.py  dispatch.py  filer.py  llm.py  log.py  notifier.py  ocr.py  pipeline.py  scanner.py  toaster.py  watcher.py
automafile/extractors/: _caps.py  _meta.py  _text_quality.py  base.py  docx.py  epub.py  html.py  image.py  pdf.py  pptx.py  text.py  unknown.py  xlsx.py
automafile/metadata/: __init__.py  hashing.py  mtime.py  native.py  reconcile.py  schema.py  sidecar.py
automafile/prompts/: triage.txt
dragndoc/: __init__.py  __main__.py  asr_artifacts.py  bootstrap.py  cli.py  config.py  db.py  dir_classifier.py  dirs.py  dispatch.py  events.py  filer.py  llm.py  log.py  log_viewer.py  meta_store.py  mux.py  notifier.py  ocr.py  paths.py  pipeline.py  process.py  proposals.py  recording_type.py  runtime.py  scanner.py  toaster.py  toaster_setup.py  transcribe.py  treewalk.py  triage.py  triage_queue.py  watcher.py
dragndoc/cli/: __init__.py  _common.py  _path_args.py  digest.py  dirs.py  files.py  grep.py  meta.py  misc.py  mux.py  review.py  toaster.py  transcript.py  triage.py  watch.py
dragndoc/extractors/: __init__.py  _asr.py  _caps.py  _meta.py  _ocr.py  _text_quality.py  audio.py  base.py  docx.py  epub.py  html.py  image.py  pdf.py  pptx.py  text.py  unknown.py  video.py  xlsx.py
dragndoc/metadata/: reconcile.py  schema.py  sidecar.py
dragndoc/prompts/: triage.txt
dragndoc/scanner/: __init__.py  passes.py  reconcile.py  worklist.py
scripts/: cleanup_sidecars.py  install.py  toaster.cmd  toaster.py  triage.cmd  triage.sh
tests/: conftest.py  test_audio_video_extractors.py  test_caps.py  test_cp.py  test_db.py  test_dirs.py  test_dispatch.py  test_dups.py  test_events_toaster.py  test_extracted_metadata.py  test_filer.py  test_image_extractor.py  test_llm_parse.py  test_llm_prompt.py  test_ls_cat.py  test_mux.py  test_mv.py  test_native_metadata.py  test_ocr_decision.py  test_pdf_extractor.py  test_pipeline.py  test_pptx_extractor.py  test_process_marking.py  test_reconcile.py  test_reconcile_single.py  test_rm.py  test_runtime.py  test_scanner.py  test_schema_migration.py  test_sidecar.py  test_transcribe.py  test_triage.py  test_xlsx_extractor.py
tests/fixtures/: _audio.m4a  _subs.srt
tmp/: migrate-to-db-plan.md
