[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragndoc"
version = "0.1.0"
description = "A thin Python pipeline that watches a folder, extracts metadata, and asks a local LLM to enrich files in place."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Drag'n'Doc" }]

dependencies = [
  "typer>=0.12",
  "watchdog>=4.0",
  "pypdf>=4.2",
  "pikepdf>=9.0",
  "pdf2image>=1.17",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=0.6",
  "Pillow>=10.3",
  "pillow-heif>=0.16",
  "olefile>=0.47",  # silences Pillow's MicImagePlugin import warnings
  "pytesseract>=0.3.10",
  "piexif>=1.1",
  "beautifulsoup4>=4.12",
  "ebooklib>=0.18",
  "python-magic-bin>=0.4.14; platform_system=='Windows'",
  "python-magic>=0.4.27; platform_system!='Windows'",
  "PyYAML>=6.0",
  "requests>=2.32",
  "pydantic>=2.7",
  "windows-toasts>=1.1; platform_system=='Windows'",
  "pystray>=0.19; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.scripts]
dnd = "dragndoc.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dragndoc*"]

[tool.setuptools.package-data]
dragndoc = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
cache_dir = "build/pytest_cache"

[tool.coverage.run]
data_file = "build/.coverage"
source = ["dragndoc"]

[tool.distutils.egg_info]
egg_base = "build"

[tool.coverage.report]
show_missing = true
